adicionar funcionalidade para anexar imagens, pdfs e video na abertura de caso
